k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production-api
  labels:
    name: production-api
    environment: production
